refactored more SCSS to reduce nesting, fixed layout issues on mobile, desktop and 2560px (4k)

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -13,38 +13,34 @@ button {
 button.ios-download {
   background-color: hsl(171, 66%, 44%);
   color: white;
-  box-shadow: 0 3px 0 #1e9482, 0 15px 30px hsla(210, 10%, 33%, 0.2);
+  box-shadow: 0 3px 0 hsl(171, 66%, 35%), 0 15px 30px hsla(210, 10%, 33%, 0.2);
 }
 button.ios-download:hover, button.ios-download:focus-visible {
-  background-color: #34d5bd;
+  background-color: hsl(171, 66%, 52%);
 }
 button.mac-download {
   background-color: hsl(233, 100%, 69%);
   color: white;
-  box-shadow: 0 3px 0 #1a34ff, 0 15px 30px hsla(210, 10%, 33%, 0.2);
+  box-shadow: 0 3px 0 hsl(233, 100%, 55%), 0 15px 30px hsla(210, 10%, 33%, 0.2);
 }
 button.mac-download:hover, button.mac-download:focus-visible {
-  background-color: #8a97ff;
+  background-color: hsl(233, 100%, 77%);
 }
 
-/* Styling */
 html {
   font-family: "Bai Jamjuree", sans-serif;
   font-weight: 400;
   font-size: 1.125rem;
-  /* Set Fluid Font-size*/
   font-size: clamp(1rem, 0.9rem + 0.5vw, 1.125rem);
   overflow-x: hidden;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   text-align: center;
-}
-
-* {
-  box-sizing: border-box;
   margin: 0;
-  padding: 0;
 }
 
 .container {
@@ -56,8 +52,13 @@ body {
 }
 
 h1 {
-  font-size: 2.375rem;
-  padding-bottom: 1.5rem;
+  font-size: 2rem;
+  margin: 0;
+}
+@media (min-width: 768px) {
+  h1 {
+    font-size: 2.375rem;
+  }
 }
 
 h2 {
@@ -112,19 +113,25 @@ header::before {
   mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
   -webkit-mask-image: linear-gradient(to bottom, black 85%, transparent 100%);
 }
+header .header__logo {
+  margin-bottom: 3rem;
+}
+header p {
+  max-width: 20rem;
+  margin-inline: 0.9rem;
+}
 
 @media (min-width: 768px) {
   header p {
-    max-width: 38rem;
+    max-width: 34rem;
+  }
+  header p br {
+    display: none;
   }
   header::before {
     background-image: url("../images/bg-header-desktop.png");
   }
 }
-.logo {
-  padding-bottom: 4rem;
-}
-
 .download-buttons {
   display: flex;
   flex-direction: column;
@@ -132,9 +139,7 @@ header::before {
   align-items: center;
   gap: 1.5rem;
   width: 100%;
-  margin-bottom: 3rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  margin-bottom: 8rem;
 }
 .download-buttons button {
   width: 100%;
@@ -168,12 +173,44 @@ header::before {
   }
 }
 
+.features-split img {
+  max-width: 100%;
+}
+.features-split .features-split__list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+.features-split .features-split__item {
+  padding: 1rem;
+}
+@media (min-width: 1440px) {
+  .features-split {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    width: 100%;
+    column-gap: 0.75rem;
+  }
+  .features-split img {
+    justify-self: end;
+    transform: translateX(-4rem);
+    max-width: none;
+    margin-bottom: 0;
+  }
+  .features-split .features-split__list {
+    max-width: 23rem;
+    text-align: left;
+    padding-left: 0;
+  }
+}
+
 .clipboard-access-section {
   margin-top: 10rem;
   margin-bottom: 2.5rem;
 }
 .clipboard-access-section p {
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 }
 .clipboard-access-section img {
   max-width: 100%;
@@ -181,12 +218,22 @@ header::before {
 }
 @media (min-width: 1440px) {
   .clipboard-access-section {
-    margin-top: 12rem;
+    margin-top: 5rem;
+  }
+  .clipboard-access-section h2,
+  .clipboard-access-section p {
     max-width: 40rem;
+    margin-inline: auto;
+  }
+  .clipboard-access-section p {
+    margin-bottom: 7rem;
+  }
+  .clipboard-access-section img {
+    max-width: none;
   }
 }
 
-.features-list {
+.features-section__list {
   list-style: none;
   padding: 0;
   display: flex;
@@ -197,26 +244,26 @@ header::before {
   text-align: center;
   margin: 5rem 0;
 }
-.features-list img {
+.features-section__list-item {
+  max-width: 20rem;
+}
+.features-section__list-item img {
   height: 2.5rem;
   margin-bottom: 2rem;
 }
-.features-list .features-list__item {
-  max-width: 20rem;
-}
-.features-list .features-list__item .features-list__item--last {
+.features-section__list-item--last {
   max-width: 28rem;
 }
-.features-list .features-list__description--last br {
+.features-section__description--last br {
   display: none;
 }
 @media (min-width: 1440px) {
-  .features-list .features-list__description--last br {
+  .features-section__description--last br {
     display: initial;
   }
 }
 @media (min-width: 768px) {
-  .features-list {
+  .features-section__list {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -225,17 +272,13 @@ header::before {
   }
 }
 @media (min-width: 1440px) {
-  .features-list {
-    width: 100%;
-    padding-inline: 1.5rem;
-  }
-  .features-list .features-list__item:first-of-type {
+  .features-section__list-item:first-of-type {
     max-width: 23rem;
   }
-  .features-list .features-list__item:nth-of-type(2) {
+  .features-section__list-item:nth-of-type(2) {
     max-width: 22rem;
   }
-  .features-list .features-list__item:last-of-type {
+  .features-section__list-item:last-of-type {
     max-width: 28rem;
   }
 }
@@ -273,6 +316,25 @@ header::before {
     margin-bottom: 7rem;
   }
 }
+.clipboard-platforms h2 {
+  margin-bottom: 0;
+}
+.clipboard-platforms p {
+  margin-top: 0;
+  margin-bottom: 3rem;
+  padding: 1rem;
+}
+@media (min-width: 1440px) {
+  .clipboard-platforms {
+    max-width: 40rem;
+  }
+  .clipboard-platforms p {
+    max-width: 38rem;
+    margin-inline: auto;
+    margin-bottom: 1rem;
+  }
+}
+
 .footer {
   background-color: hsl(220, 16%, 96%);
   padding: 3rem 2rem;
@@ -324,12 +386,12 @@ header::before {
   .footer {
     display: grid;
     grid-template-columns: auto auto 1fr;
-    grid-template-areas: "logo nav social" "attribution attribution attribution";
+    grid-template-areas: "footer__logo nav social" "attribution attribution attribution";
     align-items: center;
     column-gap: 2.5rem;
     row-gap: 2rem;
     padding: 2rem 4rem;
-    margin-top: 2rem;
+    margin-top: 0;
   }
   .footer__nav {
     grid-area: nav;
@@ -378,51 +440,29 @@ header::before {
     width: max-content;
   }
 }
-.features-split img {
-  max-width: 100%;
-  margin-bottom: 2rem;
-}
-.features-split .features-split__list {
-  list-style: none;
-  padding: 0;
-  text-align: center;
-}
-.features-split .features-split__item {
-  padding: 1rem;
-}
-@media (min-width: 1440px) {
-  .features-split {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+/* 4k Layout */
+@media (min-width: 2560px) {
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    column-gap: 0.75rem;
+    flex-wrap: wrap;
   }
-  .features-split img {
-    justify-self: end;
-    transform: translateX(-4rem);
-    max-width: none;
-    margin-bottom: 0;
+  .footer__nav {
+    flex-grow: 0.2;
+    display: flex;
+    justify-content: center;
   }
-  .features-split .features-split__list {
-    max-width: 24.875rem;
-    text-align: left;
-    padding-left: 0;
+  .footer__attribution {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-basis: 100%;
+    gap: 0.3rem;
+    margin-bottom: 2rem;
   }
 }
 
-.clipboard-platforms {
-  margin-block: 8rem;
-}
-.clipboard-platforms p {
-  margin-bottom: 3rem;
-}
-@media (min-width: 1440px) {
-  .clipboard-platforms {
-    max-width: 40rem;
-  }
-  .clipboard-platforms p {
-    max-width: 38rem;
-    margin-inline: auto;
-  }
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
